src/components/ui/Main/Skills/Skills.scss
@import '../../../../styles/variables';
@import '../../../../styles/mixins';

.detail{
  position: absolute;
  right:100vw;
  bottom:6rem;
  background:$white;
  width:100vw;
  margin:0 -2.5rem;
}

.detailBody{
  padding:2.5rem;
  background:$white;
}

.detailOpen{
  @extend .detail;
  right:0;
  transition: right .25s ease-out;
  h2{
    margin: 0 0 1rem 0;
  }

  p {
    margin: 0 0 1.5rem 0;
    padding:1.5rem 0;
    color: $darkgray-light;
    border-bottom:$lightgray-dark 1px solid;
    border-top:$lightgray-dark 1px solid;
  }
}

.skills{
  color:$white;
  display: flex;
  position: relative;
}

.skill{
  button{
    width:4rem;
    height: 4rem;
    margin: 0 .5rem;
    background: $black;
    border: none;
    border-radius: 50%;
    overflow: hidden;
    font-size: 2.1rem;
    text-align: center;
    padding-top:0;
  }
}

.skillActive{
  @extend .skill;
  button{
    background: $white;
  }
}

.title{
  margin:0;
  padding:0;
  color:$mediumgray-dark;
  font-size: 1.6rem;
  text-transform: uppercase;
  small{
    font-size: 1.2rem;
    text-transform: lowercase;
    font-weight: normal;
    padding-left:.5rem
  }
}

@include tablet{
  .detail{
    position: absolute;
    right:$tabletWidth / 2;
    width:$tabletWidth / 2;
    bottom:6.5rem;
    min-height: 32rem;
    background:$white;
  }
  .detailOpen{
    right:0;
    transition: right .25s ease-out;
  }
  .skill{
    button{
      width:5rem;
      height: 5rem;
      margin-right: 1.5rem;
      font-size: 2.8rem;
      text-align: center;
      padding-top:.2rem;
    }
  }

}

@include desktop{
  .detail{
    position: absolute;
    right:50vw;
    width:$desktopWidth / 2;
    bottom:6.5rem;
    min-height: 32rem;
    background:$white;
    transition: right .25s ease-out;
  }
  .detailOpen{
    right:0;
    transition: right .25s ease-out;
  }
  .skill{
    button{
      width:5rem;
      height: 5rem;
      margin-right: 1.5rem;
      font-size: 2.8rem;
      text-align: center;
      padding-top:.2rem;
    }
  }

}

